--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header h2 {
 }
 
 @media only screen and (max-width: 375px) {
-    h2 {
+    header h2 {
         font-size: 1.2rem;
     }
     .calculator form input {
