--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ header h2 {
 .calculator .clear, .pl-minus, .percent {
     /* background-color: rgb(250, 248, 114); */
     background-color: rgb(248, 245, 81);
+    color: black;
 }
 .calculator .operator, .operator-result {
     background-color: rgb(46, 45, 45);
@@ -82,6 +83,7 @@ header h2 {
     /* background-color: rgba(233, 233, 233, 0.541); */
     /* background-color: rgba(223, 222, 222, 0.4); */
     background-color: rgba(245, 245, 245, 0.418);
+    color: white;
 }
 
 @media only screen and (max-width: 375px) {
