fix default input style in different devices

--- a/style.css
+++ b/style.css
@@ -41,8 +41,9 @@ header h2 {
     border-radius: 50%;
     font-size: 1.5rem;
     cursor: pointer;
+    /* remove default input settings in ipad, iphone */
     -webkit-appearance: none;
-    -webkit-border-radius:0;
+    -webkit-border-radius: 50%;
 }
 .calculator .current-output {
     border-radius: 0.3125rem;
