fix default input style in different devices

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header h2 {
     cursor: pointer;
     /* remove default input settings in ipad, iphone */
     -webkit-appearance: none;
-    -webkit-border-radius: 50%;
+    padding: 0px;
 }
 .calculator .current-output {
     border-radius: 0.3125rem;
