--- a/style.css
+++ b/style.css
@@ -31,32 +31,41 @@ header h2 {
 .calculator form {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
+    /* grid-template-columns: repeat(4, 4.875rem);  */
     grid-auto-rows: 1fr;
+    /* grid-auto-rows: 4.875rem; */
     grid-gap: 0.625rem;
     justify-content: center;
     padding: 1.25rem;
 }
 .calculator form input {
     border: none;
-    border-radius: 50vh;
+    border-radius: 50%;
     font-size: 1.5rem;
     cursor: pointer;
     /* remove default input settings in ipad, iphone */
     -webkit-appearance: none;
     /* padding: 0px; */
+
+    /* set height and width to make input perfect square */
+    height: 4.875rem;
+    width: 4.875rem;
 }
 .calculator .current-output {
     border-radius: 0.3125rem;
     text-align: right;
-    padding: 1.56rem;
+    padding: 1.9rem;
     outline: none;
 }
 .calculator form input[type="text"] {
     grid-column: span 4;
+    width: calc(4.875rem * 4 + 0.625rem * 3);
 }
 .calculator form input[value="="] {
     grid-column: span 2;
-    border-radius: 100vh / 100vh;
+    border-radius: 50% / 100%;
+    /* border-radius: 100vh / 100vh; */
+    width: calc(4.875rem * 2 + 0.625rem);
 }
 
 .calculator .number, .decimal, .current-output {
@@ -88,14 +97,29 @@ header h2 {
     color: white;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 414px) {
     header h2 {
         font-size: 1.2rem;
     }
+    /* resizing calculator container */
     .calculator form input {
         font-size: 1rem;
+        width: 3.25rem;
+        height: 3.25rem;
+    }
+    .calculator form {
+        /* grid-template-columns: repeat(4, 3.25rem); 
+        grid-auto-rows: 3.25rem; */
+        grid-gap: 0.42rem;
+        padding: 0.83rem;
     }
     .calculator .current-output {
-        padding: 1.1rem;
+        padding: 1.27rem;
+    }
+    .calculator form input[type="text"] {
+        width: calc(3.25rem * 4 + 0.42rem * 3);
+    }
+    .calculator form input[value="="] {
+        width: calc(3.25rem * 2 + 0.42rem);
     }
 }
